force-app/main/default/objects/Batch__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <displayFormat>A-{0000}</displayFormat>
    <label>Duration</label>
    <type>AutoNumber</type>
</CustomField>