force-app/main/default/objects/Batch__c/fields/Mode_of_Training__c.field-meta.xml
<CustomField>
    <fullName>Mode_of_Training__c</fullName>
    <label>Mode of Training</label>
    <length>60</length>
    <type>Text</type>
</CustomField>