force-app/main/default/objects/Batch__c/fields/Timings__c.field-meta.xml
<CustomField>
    <fullName>Timings__c</fullName>
    <label>Timings</label>
    <type>Time</type>
</CustomField>